--- a/docker.compose/docker-compose.yml
+++ b/docker.compose/docker-compose.yml
@@ -10,11 +10,12 @@ services:
       MYSQL_USER: monitoria_user
       MYSQL_PASSWORD: monitoria_password
     ports:
-      - "3306:3306"
+      - "3305:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - monitoria-network
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
 
 volumes:
   mysql_data:
