--- a/monitoramento/src/main/resources/application.yaml
+++ b/monitoramento/src/main/resources/application.yaml
@@ -8,8 +8,8 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      # ddl-auto: create-drop
-      ddl-auto: update
+      ddl-auto: create-drop
+      # ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -20,8 +20,8 @@ spring:
 
   sql:
     init:
-      # mode: always
-      mode: never
+      mode: always
+      # mode: never
 
 server:
   port: 8080
